load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@python_3_12//:defs.bzl", compile_pip_requirements_3_12 = "compile_pip_requirements")

package(
    default_visibility = ["//visibility:private"],
)

exports_files(["LICENSE"])

package_group(
    name = "external_users",
    includes = [":internal_users"],
    packages = [
        # llvm-cm prototype.
        "//llvm_cm/...",
    ],
)

# A package group used for internal visibility within the EXEgesis code.
package_group(
    name = "internal_users",
    packages = [
        # Gematria code base.
        "//gematria/...",
        "//tools/...",
    ],
)

# A target to create a copy of pybind11_abseil's status.so so that it can be
# placed in the right path while building a pip package.
copy_file(
    name = "package_pybind11_abseil_status",
    src = "@pybind11_abseil_repo//pybind11_abseil:status.so",
    out = "pybind11_abseil/status.so",
    visibility = ["//:internal_users"],
)

compile_pip_requirements_3_12(
    name = "requirements_3_12",
    src = "requirements.in",
    requirements_txt = "requirements_lock_3_12.txt",
    timeout = "moderate",
)

exports_files(["requirements.in"])
