load("//:proto.bzl", "gematria_proto_library")

package(
    default_visibility = ["//:external_users"],
)

gematria_proto_library(
    name = "basic_block_proto",
    srcs = ["basic_block.proto"],
    deps = [
        ":canonicalized_instruction_proto",
    ],
)

gematria_proto_library(
    name = "canonicalized_instruction_proto",
    srcs = ["canonicalized_instruction.proto"],
    deps = [
        ":annotation_proto",
    ],
)

gematria_proto_library(
    name = "throughput_proto",
    srcs = ["throughput.proto"],
    deps = [
        ":basic_block_proto",
    ],
)

gematria_proto_library(
    name = "annotation_proto",
    srcs = ["annotation.proto"],
)

gematria_proto_library(
    name = "execution_annotation_proto",
    srcs = ["execution_annotation.proto"],
)
