package(
    default_visibility = ["//visibility:private"],
)

# NOTE(ondrasej): The TFLite op code is built only using CMake due to the
# difficulty of including TFLite as a dependency in a Bazel project.
# TODO(ondrasej): As of 2023-10-09, tests for the TFlite op is not built or
# run in the open-source code. Add a way to make it run.
