load("//:python.bzl", "gematria_py_library", "gematria_py_binary", "gematria_py_test")

gematria_py_library(
    name="compile_modules_lib",
    srcs = ["compile_modules_lib.py"],
    data = [
        "@llvm-project//llvm:llc",
        "@llvm-project//llvm:opt",
    ],
    deps = [
        "//gematria/datasets/python:extract_bbs_from_obj",
        "@rules_python//python/runfiles",
    ]
)

gematria_py_binary(
    name="compile_modules",
    srcs=["compile_modules.py"],
    deps = [
        ":compile_modules_lib",
    ]
)

gematria_py_test(
    name = "compile_modules_lib_test",
    srcs = ["compile_modules_lib_test.py"],
    deps = [
        ":compile_modules_lib",
    ]
)

