load(
    "//gematria/testing:lit.bzl",
    "glob_lit_tests",
)

package(
    default_visibility = ["//visibility:private"],
    features = ["layering_check"],
)

glob_lit_tests(
    name = "lit_tests",
    data = [
        "//gematria/datasets:convert_bhive_to_llvm_exegesis_input",
        "@llvm-project//llvm:FileCheck",
        "@llvm-project//llvm:not",
        "@llvm-project//llvm:split-file",
    ],
    test_file_exts = ["test"],
)
