load(
    "//gematria/testing:lit.bzl",
    "glob_lit_tests",
)

package(
    default_visibility = ["//visibility:private"],
    features = ["layering_check"],
)

glob_lit_tests(
    name = "lit_tests",
    data = [
        "//gematria/datasets:extract_bbs_from_obj",
        "@llvm-project//llvm:FileCheck",
        "@llvm-project//llvm:yaml2obj",
    ],
    test_file_exts = ["test"],
)
