load("//:python.bzl", "gematria_py_binary", "gematria_py_library", "gematria_py_test")

gematria_py_library(
    name = "compile_modules_lib",
    srcs = ["compile_modules_lib.py"],
    data = [
        "@llvm-project//llvm:llc",
        "@llvm-project//llvm:opt",
    ],
    deps = [
        "//gematria/datasets/python:bhive_to_exegesis",
        "//gematria/datasets/python:extract_bbs_from_obj",
        "//gematria/datasets/python:process_and_filter_bbs",
        "//gematria/io/python:tfrecord",
        "//gematria/llvm/python:llvm_architecture_support",
        "//gematria/proto:execution_annotation_py_pb2",
        "@rules_python//python/runfiles",
    ],
)

gematria_py_binary(
    name = "compile_modules",
    srcs = ["compile_modules.py"],
    deps = [
        ":compile_modules_lib",
    ],
)

gematria_py_test(
    name = "compile_modules_lib_test",
    srcs = ["compile_modules_lib_test.py"],
    # TODO(boomanaiden154): We use the python implementation here as otherwise
    # we get a segmentation fault. Eventually this should be debugged and
    # fixed.
    env = {
        "PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION": "python",
    },
    deps = [
        ":compile_modules_lib",
        "//gematria/testing/python:ir_utils",
    ],
)
